<resources>
    <string name="app_name">Icripto POS</string>
    <string name="pay_button_text">PAGAR</string>
    <string name="terminal_title">Terminal POS Icripto</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="delete">Borrar</string>
    <string name="selected_currency">Moneda:</string>
    <string name="select_currency">Moneda:</string>
    <string name="moneda_inicial">CLP</string>
    <string name="nombre_tienda">Restaurant A</string>
    <string name="enter_server">Ingrese la URL del servidor BTCPay: (requerido)</string>
    <string name="enter_btcpay_api_key">Ingrese API key de BTCPay: (requerido)</string>
    <string name="btcpay_api_key_hint">API key</string>
    <string name="enter_buda_username">Ingrese usuario link de pago Buda: (requerido)</string>
    <string name="buda_username">Sólo el nombre: buda.com/link/{nombre}</string>
    <string name="enter_server_lnbits">Ingrese la URL del servidor LNBits: (requerido)</string>
    <string name="setting_text">Ajustes</string>
    <string name="settings_icon">Ajustes</string>
    <string name="enter_lightning_id">Ingrese el ID de la tienda BTCPay: (requerido)</string>
    <string name="enter_lnbits_api_title">Ingrese el Invoice Key de LNBits: (requerido)</string>
    <string name="enter_lnbits_api_key">Campo "Invoice/read Key" en LNBits</string>
    <string name="enter_merchant_name">Ingrese el nombre del local: (opcional)</string>
    <string name="save_text">Guardar</string>
    <string name="go_back_text">Volver</string>
    <string name="merchant_name_hint">Nombre de Local</string>
    <string name="lightning_id_hint">ID de local según URL en servidor BTCPay</string>
    <string name="server_url_hint">URL Tor es del tipo "'http://..'" \nURL en clearnet es del tipo "'https://..'"
    </string>
    <string name="server_lnbits_url_hint">"'https://…'"</string>
    <string name="id_actual">ID Actual:</string>
    <string name="servidor_actual">Servidor Actual:</string>
    <string name="github_repo">
        <a href="https://github.com/felipebrunet/icriptopos">Open Source</a>
    </string>
    <string name="logo_github">Logo Github</string>
    <string name="switch_propinas">Propinas</string>
    <string name="init_val_screen">Ir a ajustes</string>
    <string name="tip_message">Indicar propina</string>
    <string name="no_tip">Sin propina</string>
    <string name="text_version">Icripto POS V1.7.1</string>
    <string name="wheel_icon">Ajustes</string>
    <string name="select_instance">Instancia:</string>
    <string name="enter_ln_wallet_id">Ingrese lightning wallet Id en LNBits: (requerido)</string>
    <string name="ln_wallet_id_hint">Campo "Wallet ID" de LNBits</string>
    <string name="enter_onchain_wallet_id">Ingrese OnChain wallet Id en LNBits: (opcional)</string>
    <string name="onchain_wallet_id_hint">"ID" en extensión OnChain Wallet de LNBits</string>
    <string name="delete_pin">Borrar PIN</string>
    <string name="create_pin">Crear PIN secreto</string>
    <string name="saved_pin">PIN Guardado</string>
    <string name="enter_pin">Ingrese PIN secreto</string>
    <string name="granted_message">Acceso autorizado</string>
    <string name="denied_message">Acceso denegado</string>
    <string name="pin_deleted">PIN borrado</string>
    <string name="data_saved">Valores guardados</string>
    <string name="texto_qrbuda">Pago con Bitcoin Lightning</string>
    <string name="texto_qrbinance">Pago con Bitcoin Lightning</string>
    <string name="instr_para_pagar">Escanea este código QR con tu wallet y paga en</string>
    <string name="monto">Monto:</string>
    <string name="moneda">Moneda:</string>
    <string name="motivo">Motivo:</string>
    <string name="qr_para_pago_con_lightning">QR para pago con Lightning</string>
    <string name="montopagovalor">$150</string>
    <string name="monedapagovalor">CLP</string>
    <string name="motivopagovalor">Pago lightning, Restaurant A</string>
    <string name="copy_invoice_message">Copiar lightning Invoice</string>
    <string name="paid_invoice_message">Invoice Pagado!</string>
    <string name="paid_invoice_failed">Invoice ha expirado</string>
    <string name="loading_message">Cargando</string>
    <string name="error_lnbits">Error Lnbits</string>
    <string name="error_btcpay">Error BTCPay API</string>
    <string name="bitaroo_amount">1.00</string>
    <string name="bitaroo_currency">AUD</string>
    <string name="buda_username_error">Usuario no registrado, revisar en Ajustes y en Buda.com</string>
    <string name="binance_username_error">Usuario no registrado, revisar en Ajustes y en Binance.com</string>
    <string name="binance_invalid_amount">Monto no permitido, revisar en Binance.com</string>
    <string name="buda_generic_error">Error usuario o monto, revisar en Buda.com</string>
    <string name="buda_review_payment">Revisar pago en Buda.com</string>
    <string name="bitaroo_username_error">Usuario no registrado, revisar en Ajustes y en bitaroo.com.au</string>
    <string name="enter_bitaroo_apikey">Ingrese Api Key full acceso de Bitaroo: (requerido)</string>
    <string name="bitaroo_apikey">Api Key Bitaroo: key_id.key_secret</string>
    <string name="enter_lightning_address">Ingrese Lightning Address (requerido)</string>
    <string name="lightning_address">Lightning Address: username@example.com</string>
    <string name="enter_buda_api_key">Ingrese ApiKey de Buda: (requerido)</string>
    <string name="buda_api_key">Recomendado ApiKey sin cap. de retiros</string>
    <string name="enter_buda_api_secret">Ingrese Api Secret de Buda: (requerido)</string>
    <string name="buda_api_secret">Api Secret</string>
    <string name="enter_binance_api_key">Ingrese ApiKey de Binance: (requerido)</string>
    <string name="binance_api_key">Recomendado ApiKey sin cap. de retiros</string>
    <string name="enter_binance_api_secret">Ingrese Api Secret de binance: (requerido)</string>
    <string name="binance_api_secret">Api Secret</string>


</resources>