<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/io_background"
    tools:context=".ActividadAjustes">


    <TextView
        android:id="@+id/setings_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/io_background"
        android:gravity="center"
        android:text="@string/setting_text"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />


    <TextView
        android:id="@+id/instance_title"
        android:layout_width="225dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/select_instance"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/server_title"
        app:layout_constraintTop_toTopOf="@+id/frame_lightning_instance"
        tools:ignore="TextSizeCheck" />


    <FrameLayout
        android:id="@+id/frame_lightning_instance"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/myborder"
        app:layout_constraintEnd_toEndOf="@+id/server_title"
        app:layout_constraintTop_toBottomOf="@+id/setings_title">

        <Spinner
            android:id="@+id/spinner_instances"
            android:layout_width="120dp"
            android:layout_height="42dp"
            android:spinnerMode="dropdown"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </FrameLayout>




    <TextView
        android:id="@+id/currency_title"
        android:layout_width="225dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/select_currency"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/server_title"
        app:layout_constraintTop_toTopOf="@+id/frame_layout_currency"
        tools:ignore="TextSizeCheck" />

    <FrameLayout
        android:id="@+id/frame_layout_currency"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/myborder"
        app:layout_constraintEnd_toEndOf="@+id/server_title"
        app:layout_constraintTop_toBottomOf="@+id/instance_title">

        <Spinner
            android:id="@+id/spinner_currencies"
            android:layout_width="120dp"
            android:layout_height="42dp"
            android:spinnerMode="dropdown"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </FrameLayout>


    <TextView
        android:id="@+id/server_title"
        android:layout_width="350dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:text="@string/enter_server"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tips1"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/server_url"
        android:layout_width="349dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:background="@color/white"
        android:gravity="top"
        android:hint="@string/server_url_hint"
        android:inputType="textUri"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/server_title"
        app:layout_constraintStart_toStartOf="@+id/server_title"
        app:layout_constraintTop_toBottomOf="@+id/server_title" />


    <TextView
        android:id="@+id/store_title"
        android:layout_width="348dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:text="@string/enter_lightning_id"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/server_url"
        app:layout_constraintStart_toStartOf="@+id/server_url"
        app:layout_constraintTop_toBottomOf="@+id/server_url"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/lightning_id"
        android:layout_width="349dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:background="@color/white"
        android:gravity="top"
        android:hint="@string/lightning_id_hint"
        android:inputType="text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/store_title"
        app:layout_constraintStart_toStartOf="@+id/store_title"
        app:layout_constraintTop_toBottomOf="@+id/store_title"
        tools:ignore="TouchTargetSizeCheck" />


    <TextView
        android:id="@+id/merchant_settings_title"
        android:layout_width="348dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:text="@string/enter_merchant_name"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/lightning_id"
        app:layout_constraintStart_toStartOf="@+id/lightning_id"
        app:layout_constraintTop_toBottomOf="@+id/lightning_id"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/merchant_name"
        android:layout_width="349dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:background="@color/white"
        android:hint="@string/merchant_name_hint"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/merchant_settings_title"
        app:layout_constraintStart_toStartOf="@+id/merchant_settings_title"
        app:layout_constraintTop_toBottomOf="@+id/merchant_settings_title"
        tools:ignore="TouchTargetSizeCheck" />


    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/gray1"
        android:text="@string/save_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/merchant_name" />

    <Button
        android:id="@+id/go_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/go_back_text"
        android:backgroundTint="@color/gray1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_button" />

    <TextView
        android:id="@+id/versionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_version"
        app:layout_constraintBottom_toTopOf="@+id/linkGH"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/linkGH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="150dp"
        android:text="@string/github_repo"
        app:layout_constraintStart_toStartOf="@+id/versionText"
        app:layout_constraintTop_toBottomOf="@+id/go_back_button"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/linkGH"
        app:layout_constraintTop_toTopOf="@+id/linkGH"
        app:srcCompat="@drawable/githubmark"
        android:contentDescription="@string/logo_github" />

    <Switch
        android:id="@+id/tips1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:showText="false"
        android:text="@string/switch_propinas"
        app:layout_constraintStart_toStartOf="@+id/server_title"
        app:layout_constraintTop_toBottomOf="@+id/frame_layout_currency"
        tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>