<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/io_background"
    tools:context=".ActividadPago">


    <TextView
            android:id="@+id/TextoQR"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/io_background"
            android:gravity="center"
            android:text="@string/texto_qrbuda"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

    <TextView
            android:id="@+id/TextoInstruccion"
            android:layout_width="312dp"
            android:layout_height="60dp"
            android:background="@color/io_background"
            android:gravity="center"
            android:text="@string/instr_para_pagar"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextoQR"
            tools:ignore="TextSizeCheck" />


    <TextView
            android:id="@+id/MontoPago"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-20dp"
            android:padding="3dp"
            android:text="@string/monto"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/TextoInstruccion"
            app:layout_constraintTop_toBottomOf="@+id/TextoInstruccion"
            tools:ignore="TextSizeCheck" />


    <TextView
            android:id="@+id/MontoPagoValor"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/montopagovalor"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/MontoPago"
            app:layout_constraintTop_toBottomOf="@+id/TextoInstruccion"
    />

    <TextView
            android:id="@+id/MonedaPago"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/moneda"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/MontoPago"
            app:layout_constraintTop_toBottomOf="@+id/MontoPago"
            tools:ignore="TextSizeCheck" />


    <TextView
            android:id="@+id/MonedaPagoValor"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/monedapagovalor"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/MontoPago"
            app:layout_constraintTop_toBottomOf="@+id/MontoPagoValor"
    />

    <TextView
            android:id="@+id/MotivoPago"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/motivo"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/MonedaPago"
            app:layout_constraintTop_toBottomOf="@+id/MonedaPago"
            tools:ignore="TextSizeCheck" />

    <TextView
            android:id="@+id/MotivoPagoValor"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/motivopagovalor"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/MotivoPago"
            app:layout_constraintStart_toEndOf="@+id/MotivoPago"
            app:layout_constraintTop_toBottomOf="@+id/MonedaPagoValor"
            tools:ignore="TextSizeCheck" />


    <ImageView
            android:id="@+id/qrcodeimage"
            android:layout_width="338dp"
            android:layout_height="337dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/qr_para_pago_con_lightning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            app:srcCompat="@drawable/myborder" />

    <Button
            android:id="@+id/copybutton"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/copiar_lightning_invoice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/qrcodeimage"
            tools:ignore="TextSizeCheck" />

    <TextView
            android:id="@+id/versionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_version"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/copybutton" />

    <TextView
            android:id="@+id/linkGH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/github_repo"
            app:layout_constraintStart_toStartOf="@+id/versionText"
            app:layout_constraintTop_toBottomOf="@+id/versionText"
            tools:ignore="TextContrastCheck"/>

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/linkGH"
            app:layout_constraintTop_toTopOf="@+id/linkGH"
            app:srcCompat="@drawable/githubmark"
            android:contentDescription="@string/logo_github" />

    <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MotivoPagoValor" />


</androidx.constraintlayout.widget.ConstraintLayout>